src/assets/scss/layout/_header.scss
header{
    padding:10px 0;

    &.sticky{
        position: fixed;
        width: 100%;
        background: $white;
        box-shadow: 0px 0px 5px rgba(0,0,0,.1);
        top:0;
        z-index: 3;

        .logo-dark{
            width: 120px;
        }

        .top{
            margin-bottom:10px;
        }
        .bottom{
            margin-bottom: 0;

            ul li .sub-menu{
                padding-top:1rem;
            }
        }

        & ~ #content{
            margin-top:147px;
        }
    }

    .container{
        display: flex;
        flex-wrap: wrap;
    }
    .top, .bottom{
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;
        width: 100%;
        align-content: center;
        align-items: center;
        margin-bottom: 20px;
    }
    .top{
        border-bottom:1px solid rgba(24,29,42,.1);
        padding-bottom:10px;

        .contact-info{
            a{
                margin-left:2rem;
                transition:all .2s;

                &:hover{
                    color:$red;
                }
            }
        }
    }
    .bottom{
        .logo-white{
            display: none;
        }
        ul{
            list-style-type: none;
            display: flex;
            justify-content: space-between;
            align-items: center;
            
            li{

                &:first-of-type a{
                    margin-left: 0;

                }

                a{
                    margin-left:2rem;
                    transition: all .2s;

                    

                    &.btn{
                        margin-top:0;

                        &:hover{
                            background:$dk-red;
                            color:$white;
                        }
                    }

                    &:hover{
                        color:$red;
                    }
                }

                &:hover{
                    .sub-menu{
                        display: flex;
                    }
                }
    
                .sub-menu{
                    display: none;
                    position: absolute;
                    flex-wrap: wrap;
                    width: 300px;
                    padding-top:1.5rem;
                    margin-left:-1rem;

                    a{
                        width: 100%;
                        display: inline-block;
                        background:$white;
                        margin-left:0;
                        padding:1rem;
                        transition: .2s all;

                        &:hover{
                            background:$red;
                            color:$white;
                            cursor: pointer;
                        }
                    }
                }
            }
        }
    }
}

#menu-icon{
    display: none;
    width: 45px;
    height: 30px;
    position: relative;
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    transform: rotate(0deg);
    -webkit-transition: .5s ease-in-out;
    -moz-transition: .5s ease-in-out;
    -o-transition: .5s ease-in-out;
    transition: .5s ease-in-out;
    cursor: pointer;
  }
  
  #menu-icon span{
    display: block;
    position: absolute;
    height: 3px;
    width: 100%;
    background: $dark;
    border-radius: 3px;
    opacity: 1;
    left: 0;
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    transform: rotate(0deg);
    -webkit-transition: .25s ease-in-out;
    -moz-transition: .25s ease-in-out;
    -o-transition: .25s ease-in-out;
    transition: .25s ease-in-out;
  }
  
  #menu-icon span:nth-child(1) {
    top: 0px;
  }
  
  #menu-icon span:nth-child(2) {
    top: 12px;
  }
  
  #menu-icon span:nth-child(3) {
    top: 24px;
  }
  
  #menu-icon.open span:nth-child(1) {
    top: 12px;
    -webkit-transform: rotate(135deg);
    -moz-transform: rotate(135deg);
    -o-transform: rotate(135deg);
    transform: rotate(135deg);
  }
  
  #menu-icon.open span:nth-child(2) {
    opacity: 0;
    left: -60px;
  }
  
  #menu-icon.open span:nth-child(3) {
    top: 12px;
    -webkit-transform: rotate(-135deg);
    -moz-transform: rotate(-135deg);
    -o-transform: rotate(-135deg);
    transform: rotate(-135deg);
}

@media screen and (max-width: 800px) {
    header{
        position: relative;

        &.sticky ~ #content{
            margin-top:60.75px;
        }

        .container{
            padding:0 1rem;
            flex-wrap: nowrap;
            align-items: center;
        }
        .top{
            display: none;
        }
        .bottom{
            margin-bottom: 0;
            .logo{
                width:150px;
            }
            nav{
                display: none;
            }

        }
        &.menu-opened{

            &.sticky{
                .bottom{
                    nav{
                        top:53.75px;
                    }
                }
            }
            .bottom nav{
                display: flex;
                position:fixed;
                background:$white;
                width:100%;
                left:0;
                top:60.75px;
                height:100%;
                z-index: 3;
                
                ul{
                    flex-wrap: wrap;
                    height:calc(100vh - 60.75px);
                    overflow: scroll;
                    background:$white;

                    li{
                        width:100%;

                        a{
                            margin-left:0;
                            padding:1rem 1rem 1rem 1rem;
                            width:100%;
                            display: block;

                            &.btn{
                                border-radius: 0;
                                margin-top:1rem;
                            }

                            &:before{
                                content:'+';
                                color:$red;
                                margin-right:.5rem;
                            }
                        }

                        .sub-menu{
                            display: flex;
                            position: relative;
                            width: 100%;
                            margin:0;
                            padding:0;

                            a{
                                padding-left:3rem;
                            }
                        }
                    }
                }

                
            }
        }    
    }
    #menu-icon{
        display: block;
    }
  }

